--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -215,5 +215,8 @@ footer input[type="text"],  footer input[type="email"], footer textarea{
 /* Tablet Specific media query */
 
 @media screen and (min-width: 576px) and (max-width:990px) {
+    .banner{
+        flex-direction: column;
+    }
     
 }
